--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="nojs">
 <head>
-  <link rel="stylesheet" href="css/styles.css">
-<title>Signup Page</title>
+  <title>Signup Page</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link rel="stylesheet" media="screen" href="css/normalize.css" />
+  <link rel="stylesheet" media="screen" href="css/styles.css" />
 </head>
 <body>
 
