Including reference to normalize styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" media="screen" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
 <title>Payment Page</title>
 </head>
