As about us page and fix links to page

--- a/about-us.html
+++ b/about-us.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" class="nojs">
+<html>
 <head>
-  <title>Signup Page</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/normalize.css" />
-  <link rel="stylesheet" media="screen" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css">
+<title>About Us</title>
 </head>
 <body>
+
   <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
 
-  <ul>
-  <li><a class ="active" href="index.html">Home</a></li>
-  <li><a href="about-us.html">About Us</a></li>
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a class ="active" href="about-us.html">About Us</a></li>
   <li><a href="contact.asp">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
