--- a/payment.html
+++ b/payment.html
@@ -12,7 +12,7 @@
 
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="news.asp">About Us</a></li>
+  <li><a href="about-us.html">About Us</a></li>
   <li><a href="contact.asp">Sign Up</a></li>
   <li><a class ="active" href="payment.html">Payment</a></li>
 </ul>
