--- a/about-us.html
+++ b/about-us.html
@@ -16,8 +16,25 @@
   <li><a href="contact.asp">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
-
-
+<h2>About Us</h2>
+<div id="about-content">
+<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world,
+  devoted to promoting international dialogue and the discussion of fundamental questions
+  of universal concern, which affect all humanity, such as world peace, human rights,
+  dialogical interrelations of diverse cultures, and preservation of the world ecology.
+</p>
+<ul id="questions">
+  <li>What role does philosophical thinking have to play in moving toward a more
+    rational and more humane future?</li>
+  <li>What are ethical principles of dialogue?</li>
+  <li>How may one understand cultural diversity and universality?</li>
+  <li>How best to work toward a culture of peace?</li>
+  <li>What is the relationship between the basic liberties of individuals and the
+    collective rights of cultural groups?</li>
+</ul>
+<p>Join us in the search for answers and more question. Become an active member with the ISUD.
+  Email us HERE for more information.</p>
+</div>
 <div class="footer">
   <p>Social Media Links</p>
 </div>
