--- a/payment.html
+++ b/payment.html
@@ -13,7 +13,7 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about-us.html">About Us</a></li>
-  <li><a href="contact.asp">Sign Up</a></li>
+  <li><a href="signup.html">Sign Up</a></li>
   <li><a class ="active" href="payment.html">Payment</a></li>
 </ul>
 
