--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,9 @@
 <body>
   <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
   <ul>
-  <li><a class ="active" href="index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="about-us.html">About Us</a></li>
-  <li><a href="contact.asp">Sign Up</a></li>
+  <li><a class="active" href="signup.html">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
 <div>
