--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <li><a href="signup.html">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
+<div >
+ <img id="pic2" src="media/pic2.png" alt="ISUD"/>
+</div>
 
 
 <div class="footer">
