Add images to About Us page

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,21 @@
   <li><a href="signup.html">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
-<h2>About Us</h2>
+<div class="images">
+  <div>
+    <img src="media/man.png" alt="Man" />
+  </div>
+  <div>
+    <img src="media/monkey.png" alt="Monkey" />
+  </div>
+  <div>
+    <img src="media/pollution.png" alt="Pollution" />
+  </div>
+  <div>
+    <img src="media/statue.png" alt="Statue" />
+  </div>
+</div>
+
 <div id="about-content">
 <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world,
   devoted to promoting international dialogue and the discussion of fundamental questions
