Updates on Home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" media="screen" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-<title>Payment Page</title>
+<title>Home Page</title>
 </head>
 <body>
 
@@ -16,6 +16,9 @@
   <li><a href="signup.html">Sign Up</a></li>
   <li><a href="payment.html">Payment</a></li>
 </ul>
+<h3>International Society for Universal Dialogue is a philosophical society whose
+purpose is to promote discussions of human rights, world peace, and preservation
+of the environment. </h3>
 <div >
  <img id="pic2" src="media/pic2.png" alt="ISUD"/>
 </div>
