--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
     collective rights of cultural groups?</li>
 </ul>
 <p>Join us in the search for answers and more question. Become an active member with the ISUD.
-  Email us HERE for more information.</p>
+  Sign up <a href="signup.html" id="signup-link">HERE</a> for more information.</p>
 </div>
 <div class="footer">
   <p>Social Media Links</p>
