--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
+  <h1 class="header"><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
 
 
 <ul>
