--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ of the environment. </h3>
 <div >
  <img id="pic2" src="media/pic2.png" alt="ISUD"/>
 </div>
-
+<h3>Feel free to look around and learn more about the ISUD!</h3>
 
 <div class="footer">
   <p>Social Media Links</p>
