--- a/about-us.html
+++ b/about-us.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>About Us</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-<title>About Us</title>
 </head>
 <body>
-
-  <h1 class="header"><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
-
-
+  <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a class ="active" href="about-us.html">About Us</a></li>
