--- a/payment.html
+++ b/payment.html
@@ -12,7 +12,7 @@
   <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
 
 
-<ul>
+<ul class="links">
   <li><a href="index.html">Home</a></li>
   <li><a href="about-us.html">About Us</a></li>
   <li><a href="signup.html">Sign Up</a></li>
