--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
-  <ul>
+  <ul class="links">
   <li><a href="index.html">Home</a></li>
   <li><a href="about-us.html">About Us</a></li>
   <li><a class="active" href="signup.html">Sign Up</a></li>
