--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
   Sign up <a href="signup.html" class="link">HERE</a> for more information.</p>
 </div>
 <div class="footer">
-  <p>Social Media Links</p>
+  <p>Copyright © 2020 ISUD. All rights reserved.</p>
 </div>
 
 </body>
