--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ of the environment. </h3>
 <h3>Feel free to look around and learn more about the ISUD!</h3>
 
 <div class="footer">
-  <p>Social Media Links</p>
+  <p>Copyright © 2020 ISUD. All rights reserved.</p>
 </div>
 
 </body>
