--- a/payment.html
+++ b/payment.html
@@ -35,7 +35,7 @@
 </form>
 
 <div class="footer">
-  <p>Social Media Links</p>
+  <p>Copyright © 2020 ISUD. All rights reserved.</p>
 </div>
 
 </body>
