--- a/payment.html
+++ b/payment.html
@@ -30,7 +30,7 @@
   <p><label for="date"> Expiration Date:</label>
   <input type="date" id="date" name="date"></p>
 
-  <p><button type="submit" value="Submit" style="height:25px; width: 100px">Submit</button>
+  <p><button type="submit" value="Submit" onclick="AlertPage()">Submit</button>   
   <button type="reset" value="Reset">Delete</button></p>
 </form>
 
