--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/script.js" async> </script>
 </head>
 <body>
 
