fixing button on payment page

--- a/payment.html
+++ b/payment.html
@@ -30,8 +30,8 @@
   <p><label for="date"> Expiration Date:</label>
   <input type="date" id="date" name="date"></p>
 
-  <p><input type="submit" onclick="submitPayment()" value="Submit" class="payment-buttons"/>
-  <button type="reset" value="Reset" class="payment-buttons">Delete</button></p>
+  <button type="submit" onclick="submitPayment()" value="SUBMIT">Select</button>
+  <button type="reset" value="Reset">Delete</button>
 </form>
 
 <div class="footer">
