Fixing validation error

--- a/payment.html
+++ b/payment.html
@@ -22,7 +22,7 @@
 <h3>Please enter your Payment Information</h3>
 <form id="payment-form">
   <p><label for="fullname"> Full Name:</label>
-  <input type="text" id="name" name="name"></p>
+  <input type="text" id="fullname" name="name"></p>
 
   <p><label for="cc"> Credit Card Number:</label>
   <input type="number" id="cc" name="cc"></p>
