--- a/about-us.html
+++ b/about-us.html
@@ -1,56 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>About Us</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
-<ul class="links">
-  <li><a href="index.html">Home</a></li>
-  <li><a class ="active" href="about-us.html">About Us</a></li>
-  <li><a href="signup.html">Sign Up</a></li>
-  <li><a href="payment.html">Payment</a></li>
-</ul>
-<div class="images">
-  <div>
-    <img src="media/man.png" alt="Man" />
-  </div>
-  <div>
-    <img src="media/monkey.png" alt="Monkey" />
-  </div>
-  <div>
-    <img src="media/pollution.png" alt="Pollution" />
-  </div>
-  <div>
-    <img src="media/statue.png" alt="Statue" />
-  </div>
-</div>
-
-<div id="about-content">
-<p>ISUD is a society of scholars, mostly philosophers, from many parts of the world,
-  devoted to promoting international dialogue and the discussion of fundamental questions
-  of universal concern, which affect all humanity, such as world peace, human rights,
-  dialogical interrelations of diverse cultures, and preservation of the world ecology.
-</p>
-<ul id="questions">
-  <li>What role does philosophical thinking have to play in moving toward a more
-    rational and more humane future?</li>
-  <li>What are ethical principles of dialogue?</li>
-  <li>How may one understand cultural diversity and universality?</li>
-  <li>How best to work toward a culture of peace?</li>
-  <li>What is the relationship between the basic liberties of individuals and the
-    collective rights of cultural groups?</li>
-</ul>
-<p>Join us in the search for answers and more question. Become an active member with the ISUD.
-  Sign up <a href="signup.html" class="link">HERE</a> for more information.</p>
-</div>
-<div class="footer">
-  <p>Copyright © 2020 ISUD. All rights reserved.</p>
-</div>
-
-</body>
+  <head>
+    <title>About Us</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+    <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
+    <ul class="links">
+      <li><a href="index.html">Home</a></li>
+      <li><a class ="active" href="about-us.html">About Us</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+      <li><a href="payment.html">Payment</a></li>
+    </ul>
+    <div class="images">
+      <div><img src="media/man.png" alt="Man" /></div>
+      <div><img src="media/monkey.png" alt="Monkey" /></div>
+      <div><img src="media/pollution.png" alt="Pollution" /></div>
+      <div><img src="media/statue.png" alt="Statue" /></div>
+    </div>
+    <div id="about-content">
+      <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world,
+        devoted to promoting international dialogue and the discussion of fundamental questions
+        of universal concern, which affect all humanity, such as world peace, human rights,
+        dialogical interrelations of diverse cultures, and preservation of the world ecology.
+      </p>
+      <ul id="questions">
+        <li>What role does philosophical thinking have to play in moving toward a more
+          rational and more humane future?</li>
+        <li>What are ethical principles of dialogue?</li>
+        <li>How may one understand cultural diversity and universality?</li>
+        <li>How best to work toward a culture of peace?</li>
+        <li>What is the relationship between the basic liberties of individuals and the
+          collective rights of cultural groups?</li>
+      </ul>
+      <p>Join us in the search for answers and more question. Become an active member with the ISUD.
+        Sign up <a href="signup.html" class="link">HERE</a> for more information.</p>
+    </div>
+    <div class="footer">
+      <p>Copyright © 2020 ISUD. All rights reserved.</p>
+    </div>
+  </body>
 </html>
