--- a/payment.html
+++ b/payment.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Payment Page</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="js/script.js" async> </script>
-</head>
-<body>
-
-  <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
-
-
-<ul class="links">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="about-us.html">About Us</a></li>
-  <li><a href="signup.html">Sign Up</a></li>
-  <li><a class ="active" href="payment.html">Payment</a></li>
-</ul>
-<h3>Please enter your Payment Information</h3>
-<form id="payment-form">
-  <p><label for="fullname"> Full Name:</label>
-  <input type="text" id="fullname" name="name"></p>
-
-  <p><label for="cc"> Credit Card Number:</label>
-  <input type="number" id="cc" name="cc"></p>
-
-  <p><label for="date"> Expiration Date:</label>
-  <input type="date" id="date" name="date"></p>
-
-  <button type="submit" onclick="submitPayment()" value="SUBMIT">Select</button>
-  <button type="reset" value="Reset">Delete</button>
-</form>
-
-<div class="footer">
-  <p>Copyright © 2020 ISUD. All rights reserved.</p>
-</div>
-
-</body>
+  <head>
+    <title>Payment Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+    <link rel="stylesheet" media="screen" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" async> </script>
+  </head>
+  <body>
+    <h1><img src="media/icon.png" alt="logo"/>The International Society for Universal Dialogue</h1>
+    <ul class="links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+      <li><a class ="active" href="payment.html">Payment</a></li>
+    </ul>
+    <h3>Please enter your Payment Information</h3>
+    <form id="payment-form">
+      <p>
+        <label for="fullname"> Full Name:</label>
+        <input type="text" id="fullname" name="name">
+      </p>
+      <p>
+        <label for="cc"> Credit Card Number:</label>
+        <input type="number" id="cc" name="cc">
+      </p>
+      <p>
+        <label for="date"> Expiration Date:</label>
+        <input type="date" id="date" name="date">
+      </p>
+      <button type="submit" onclick="submitPayment()" value="SUBMIT">Select</button>
+      <button type="reset" value="Reset">Delete</button>
+    </form>
+    <div class="footer">
+      <p>Copyright © 2020 ISUD. All rights reserved.</p>
+    </div>
+  </body>
 </html>
