sign up page updates, fixing picture and form location at different break points

--- a/signup.html
+++ b/signup.html
@@ -20,20 +20,20 @@
       <h3 id="center">Join us now in the search for answers by becoming an active member with the ISUD.</h3>
       <p id="text_center"> Subscibe to receive emails with our weekly inspirational quotes, news and events happening near you. </p>
     </div>
+    <div >
+     <img id="pic1" src="media/pic1.png" alt="map"/>
+    </div>
     <form method="get" autocomplete="on" action="#">
       <div id="signup_form">
-       <fieldset>
-         <div id="first_name"><label>First Name:<input type="text" name="first_name_field" required></label></div>
-         <div id="last_name"><label>Last Name:<input type="text" name="last_name_field" required></label></div>
+        <fieldset>
+         <div id="first_name"><label>First Name:<input type="text" name="first_name_field" placeholder="John" required></label></div>
+         <div id="last_name"><label>Last Name:<input type="text" name="last_name_field" placeholder="Doe" required></label></div>
          <div id="email"><label>Email Address:<input type="email" name="email_field" placeholder="example@yahoo.com" required></label></div>
          <div id="phone"><label>Phone Number:<input type="tel" name="phone_field" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="111-111-1111" required></label></div>
          <div id="date_of_birth"><label>Date of Birth:<input type="text" name="date_field" placeholder="mm/dd/yyyy" required></label></div>
-       </fieldset>
+        </fieldset>
       </div>
       <input type="submit" onclick="AlertPage()" value="SUBMIT"/>
-      <div >
-       <img id="pic1" src="media/pic1.png" alt="map"/>
-      </div>
     </form>
     <div class="footer">
       <p>Copyright © 2020 ISUD. All rights reserved. </p>
