Adding method, action and autocomplete to forms

--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
     <div >
      <img id="pic1" src="media/pic1.png" alt="map"/>
     </div>
-    <form method="get" autocomplete="on" action="#">
+    <form method="get" autocomplete="on" action="#null">
       <div id="signup_form">
         <fieldset>
          <div id="first_name"><label>First Name:<input type="text" name="first_name_field" placeholder="John" required></label></div>
