--- a/payment.html
+++ b/payment.html
@@ -17,7 +17,7 @@
       <li><a class ="active" href="payment.html">Payment</a></li>
     </ul>
     <h3>Please enter your Payment Information</h3>
-    <form method="get" autocomplete=”on” action="#null" id="payment-form">
+    <form method="get" autocomplete=”on” action="#null" id="payment-form" name="myForm">
       <p>
         <label for="fullname"> Full Name:</label>
         <input type="text" id="fullname" name="name">
