changing button names

--- a/payment.html
+++ b/payment.html
@@ -30,8 +30,8 @@
         <label for="date"> Expiration Date:</label>
         <input type="date" id="date" name="date">
       </p>
-      <button type="submit" onclick="submitPayment()" value="SUBMIT">Select</button>
-      <button type="reset" value="Reset">Delete</button>
+      <button type="submit" onclick="submitPayment()" value="Pay Now">Pay Now</button>
+      <button type="reset" value="Clear Content">Clear Content</button>
     </form>
     <div class="footer">
       <p>Copyright © 2020 ISUD. All rights reserved.</p>
