--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
          <div id="date_of_birth"><label>Date of Birth:<input type="text" name="date_field" placeholder="mm/dd/yyyy" required></label></div>
         </fieldset>
       </div>
-      <input type="submit" onclick="AlertPage()" value="SUBMIT"/>
+      <input type="submit" onclick="AlertPage()" value="SUBSCRIBE NOW"/>
     </form>
     <div class="footer">
       <p>Copyright © 2020 ISUD. All rights reserved. </p>
