Adding in space for JS time function

--- a/payment.html
+++ b/payment.html
@@ -17,6 +17,7 @@
       <li><a class ="active" href="payment.html">Payment</a></li>
     </ul>
     <h3>Please enter your Payment Information</h3>
+    <p id="time"></p>
     <form method="get" autocomplete=”on” action="#null" id="payment-form" name="myForm">
       <p>
         <label for="fullname"> Full Name:</label>
